# h_denoise_utils

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/release-notes/: v1.2.0.md
.github/workflows/: build-optix.yml  ci.yml
.kiro/specs/ui-denoising-lock/: design.md  requirements.md  tasks.md
docs/: architecture.md  codebase-tour.md  common-tasks.md  conf.py  getting-started.md  glossary.md  home.md  modules.md  optix-multilayer-denoiser-handoff.md  troubleshooting.md
h_denoise_utils/: __init__.py  __main__.py  logger.py
h_denoise_utils/core/: __init__.py  command_builder.py  config.py  denoiser.py
h_denoise_utils/discovery/: __init__.py  aov_validator.py  exr_inspector.py  houdini.py
h_denoise_utils/ui/: __init__.py  aov_scan_manager.py  logging_handler.py  main_window.py  qt_compat.py  sections.py  state.py  style.qss  tooltips.py  widgets.py  worker.py
h_denoise_utils/ui/services/: __init__.py  aov_inspector.py  output_paths.py  recent_paths.py
h_denoise_utils/utils/: __init__.py  file_utils.py  process_utils.py
packaging/: h-denoise.spec
tests/: __init__.py  conftest.py  test_aov_inspector.py  test_aov_scan_manager.py  test_command_builder.py  test_config.py  test_file_utils.py  test_logger.py  test_logging_handler.py  test_optix_multilayer_aov.py  test_output_paths.py  test_recent_paths.py  test_tooltips.py  test_ui_denoising_lock.py  test_ui_main_window.py  test_ui_tooltips.py
tools/: build_windows_package.ps1  github_release_metadata.ps1  optix_multilayer_aov.py
